# verichain

./: .gitignore  ASL_0_1_0_ABARICHITECTURE.md  ASL_15_2_ASBUILT_ARCHITECTURE.md  ASL_ARCHITECTURE.md  ASL_ARCHITECTURE_V2.md  ASL_CLASS_ARCHITECTURE.md  ASL_MANUAL.md  ASL_MLP_TASK_PLAN.md  AgentSeedLanguage_V11.md  AgentSeedLanguage_V14.md  AgentSeedLanguage_V15.md  Agent_Seed_Language_V10.md  Cargo.toml  Dockerfile  MAS_ARC42_ARCHITECTURE.md  README.md  VERICHAIN_ARC42.md  batch_1.sh  batch_10 copy 2.sh  batch_10.sh  batch_11.sh  batch_12.sh  batch_2.sh  batch_3.sh  batch_4.sh  batch_5.sh  batch_6.sh  batch_7.sh  batch_8.sh  batch_9.sh  repomix-output.xml  taskListToLaunch.md  verichain_v6_ARCHITECTURE.md  verichain_v6_TASKLIST.md
.github/workflows/: ci.yml  release.yml
cli/npm/: package.json
cli/npm/scripts/: download.js
docs/: book.toml
docs/book/: ASL_MANUAL.md  ASL_V0.1.0_Spec.md  index.html
docs/landing/: index.html
docs/playground/: index.html
docs/src/: README.md  SUMMARY.md
docs/src/architecture/: README.md  compiler.md  vm.md
docs/src/conformance/: README.md
docs/src/getting-started/: README.md  hello-agent.md  installation.md
docs/src/language/: README.md  effects.md  heartbeat-dream.md  lexical-grammar.md  memory.md  syntax.md  type-system.md
docs/src/stdlib/: README.md
examples/: agent.seed  hello.seed
seedc/: Cargo.toml
seedc-cli/: Cargo.toml
seedc-cli/src/: main.rs
seedc/src/: ast.rs  binary.rs  ir.rs  lexer.rs  lib.rs  lowering.rs  parser.rs  token.rs
seedc/src/ir/: verifier.rs
seedc/src/sema/: contractck.rs  effectck.rs  mod.rs  nameres.rs  taintck.rs  typeck.rs  types.rs
seeddbg/: Cargo.toml
seeddbg/src/: main.rs
seedfmt/: Cargo.toml
seedfmt/src/: main.rs
seedls/: Cargo.toml
seedls/src/: main.rs
seedpkg/: Cargo.toml
seedpkg/src/: main.rs
seedvm/: Cargo.toml
seedvm/src/: capability.rs  executor.rs  inference.rs  lib.rs  main.rs  orchestrator.rs  rng.rs  sanitize.rs  schedule.rs  state.rs  taint.rs  tee.rs  uncertainty.rs  value.rs
seedvm/src/memory/: adaptive.rs  coherency.rs  dream.rs  dual.rs  episodic.rs  evolutionary.rs  governance.rs  layer.rs  merkle.rs  mod.rs
seedvm/src/protocols/: a2a.rs  mcp.rs  mesh.rs  mod.rs  transport.rs
tests/: cli.rs
tests/cmd/: build.trycmd  check.trycmd  version.trycmd
