[package]
name = "seedpkg"
version = "0.1.0"
edition = "2021"
description = "AGENT-SEED v15.2 package manager — install, publish, and manage ASL dependencies"

[[bin]]
name = "seedpkg"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
miette = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
semver = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
ed25519-dalek = { workspace = true }
blake3 = { workspace = true }
hex = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
chrono = { workspace = true }
tempfile = "3"
flate2 = "1.0"
tar = "0.4"
