[package]
name = "seedvm"
version = "0.1.0"
edition = "2021"
description = "AGENT-SEED v15.2 virtual machine — deterministic bytecode interpreter"

[[bin]]
name = "seedvm"
path = "src/main.rs"

[dependencies]
seedc = { path = "../seedc" }
clap = { workspace = true }
miette = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
rand = { workspace = true }
rand_pcg = { workspace = true }
blake3 = { workspace = true }
hex = { workspace = true }
smallvec = { workspace = true }
rustc-hash = { workspace = true }
im = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
